[package]
name = "rsvw"
version = "1.1.0"
description = "RSV file viewer"
authors = ["ern0 <ern0@linkbroker.hu>", H2CO3 <arpad.goretity@gmail.com>]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/ern0/rsvw/"
edition = "2021"

[dependencies]
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
